      the toolchain.

      ENHANCEMENTS:

      Pinto::Server (a.k.a. pintod) will abort the action if it looses the connection
      with the client.  So, for example, you can press Ctrl-C in the middle of
      pulling a long chain of dependencies into a remote repository and the server
      will immediately stop and roll back the entire transaction.

      BUG FIXES:

      The "install" command can be used on a locked stack, but only if the --do-pull
      option is not given.  If you want to pull packges while installing, then you
      must unlock the stack first.  Thanks Jeremy Marshal.

0.084     2013-05-14 17:24:22 America/Los_Angeles

      ENHANCEMENTS:

      Revised documentation for pintod.

      BUG FIXES:

      Now requires verison 0.018 of Test::LWP::UserAgent or newer
      which resolves some test failures in Pinto seen by CPAN
      Testers using older versions of T::LWP::UA.

0.083     2013-05-13 14:36:21 America/Los_Angeles

      ENHANCEMENTS:

      * Improved password prompting, so it still works when STDIN
      and/or STDOUT are not connected to a terninal anymore.

      * Revised and corrected errors in documentation.

      * The etc/ directory has a sample init.d script (thanks @hesco).

0.082     2013-04-29 09:42:43 America/Los_Angeles

       Just minor changes so Pinto will run on perl 5.8.9

0.081     2013-04-26 13:51:32 America/Los_Angeles

       Just a minor change in test code to prevent failure occasionaly
       seen on Unix boxen.

0.080     2013-04-26 10:41:19 America/Los_Angeles

      HEADLINES:

      Pinto::Server and Pinto::Remote have been merged into this distribution,
      so everything ships together.  It also means both Pinto::Server and 
      Pinto::Remote are now working again.  Woot!!

      There is one caveat: when using a remote repository, pinto will not
      display the diff and prompt you to edit the commit message.  Instead,